Fix package names

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "praxisnetau/silverware-open-graph",
+    "name": "silverware/open-graph",
     "description": "Open Graph module for SilverWare.",
     "type": "silverstripe-module",
     "homepage": "https://github.com/praxisnetau/silverware-open-graph",
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "praxisnetau/silverware": "~1.0"
+        "silverware/silverware": "3.x.x-dev"
     },
     "extra": {
         "installer-name": "silverware-opengraph"
